openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: otel-demo
  labels:
    openshift.io/user-monitoring: "true"
