openshift/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: otel-demo
spec:
  selector:
    app: kafka
  ports:
    - name: plaintext
      port: 9092
      targetPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: otel-demo
spec:
  selector:
    app: otel-collector
  ports:
    - name: otlp-http
      port: 4318
      targetPort: 4318
    - name: webhook
      port: 1979
      targetPort: 1979
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: otel-demo
spec:
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: blackbox
  namespace: otel-demo
spec:
  selector:
    app: blackbox
  ports:
    - port: 9115
      targetPort: 9115
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: otel-demo
spec:
  selector:
    app: alertmanager
  ports:
    - name: http
      port: 9093
      targetPort: 9093
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: otel-demo
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
