openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx
  namespace: otel-demo
  labels:
    app: nginx
spec:
  to:
    kind: Service
    name: nginx
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
